# Crew-Ai

./: README.md
evaluationAgent/: app.env  crewAi.ipynb  report.md
evaluationAgent/modernCrew/firistcrew/: README.md  app.env  pyproject.toml
evaluationAgent/modernCrew/firistcrew/src/firistcrew/: crew.py  main.py
evaluationAgent/modernCrew/firistcrew/src/firistcrew/config/: agents.yaml  tasks.yaml
evaluationAgent/output/: evaluated_Report.md  finalReport.md  keywords.json  the Usage of Natural Language  Processing to Enhance Work  In Banking Sector-report.md  the Usage of Natural Lmague Processing to Enhance Work -report.md
