[project]
name = "firistcrew"
version = "0.1.0"
description = "firistCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
firistcrew = "firistcrew.main:run"
run_crew = "firistcrew.main:run"
train = "firistcrew.main:train"
replay = "firistcrew.main:replay"
test = "firistcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
